style.css
* {
    font-family: sans-serif;
    font-size: 16px;
}

h4 {
    font-size: 20px;
}

@media (min-width: 992px) {
    * {
        font-size: 20px;
    }
    h4 {
        font-size: 22px;
    }
}

.dropdown-bordered-items {
    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
}

.navbar {
    background-color: rgba(0, 0, 0, 0.05);
}

.profile-image {
    height: 200px;
    width: 200px;
    object-fit: cover;
}

@media (max-width: 992px) {
    .profile-image {
        width: 175px;
    }
}

.about-description {
    line-height: 30px;
}

#about p {
    font-size: 20px;
}

@media (max-width: 576px) {
    #about p {
        font-size: 18px;
    }
}

.skills::-webkit-scrollbar-thumb {
    height: 8px;
}
@media (min-width: 992px) {
    .skills::-webkit-scrollbar {
        background: rgb(255, 255, 255);
    }
}

.projects-thumbnail {
    border-radius: 20px;
}

@media (min-width: 992px) {
    
    .projects-title a {
        text-decoration: none;
    }

    .projects-title a :hover {
        color: orangered !important;
        text-decoration: underline orangered;
    }
}

.projects-title a {
        text-decoration: underline black;
}
    
.contact-info li a {
    color: black;
    text-decoration: none;
}

.contact-info li :hover {
    text-decoration: underline orangered;
    color: orangered;
}

#back-to-top {
    color: black;
    text-decoration: underline;
}

@media (max-width: 992px) {
    .mobile-dropdown-border-item {
        border-top: 2px solid rgba(0, 0, 0, 0.05);
    }
}

@media (max-width: 992px) {
    .skills {
        overflow-x: scroll;
    }
}

section {
    scroll-margin-top: 50px;
}

#skills {
    scroll-margin-top: 50px;
}

